2009-12-01  Jackson Harper  <jackson@ximian.com>

	* ManagedXamlLoader.cs: Make sure we dont set a target property
	when we actually have an attached property of the same name.
	
2009-11-30  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* GeneratedPInvokes.cs: Regenerated.

2009-11-30  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* A11yHelper.cs: MOON_A11Y_INTERNAL_HACK is not needed anymore
	  since the audit finished in r147098. r: spouliot

2009-11-27  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Value.cs:
	* Surface.cs:
	* XamlLoaderCallbacks.cs:
	* NativeDependencyObjectHelper.cs: The Native surface is refcounted and an
	EventObject descendant, ensure the managed equivalent uses the same semantics.

2009-11-25  Jackson Harper  <jackson@ximian.com>

	* GeneratedPInvokes.cs: regen

2009-11-20  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* NativeMethods.cs: Remove types_register_type, it's now generated.

	* GeneratedPInvokes.cs: Regenerated.

2009-11-20  Chris Toshok  <toshok@ximian.com>

	* NativeDependencyObjectHelper.cs: add PIXELSHADER and
	SHADEREFFECT to CreateObject.

2009-11-20  Sebastien Pouliot  <sebastien@ximian.com> 

	* GeneratedPInvokes.cs: Regenerated
	* NativeMethods.cs (types_register_type): Marshal bools properly

2009-11-19  Sebastien Pouliot  <sebastien@ximian.com> 

	* XamlLoaderCallbacks.cs: Remove old debugging code. Found using
	Gendarme's WriteStaticFieldFromInstanceMethodRule

2009-11-19  Sebastien Pouliot  <sebastien@ximian.com>

	* MoonError.cs: Avoid code duplication and reuse Value.
	StringToIntPtr
	* Value.cs: Change StringToIntPtr visibility to public and handle
	null case

2009-11-19  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* GeneratedPInvokes.cs: Regenerated.

2009-11-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* NativeDependencyObjectHelper.cs: Added object construction case for
	TimelineMarkerRoutedEventArgs.

	* Kind.cs:
	* GeneratedPInvokes.cs: Regenerated.
